--- a/currently.html
+++ b/currently.html
@@ -1,231 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Currently Working On - Neuro Bytes</title>
-    <style>
-        /* Import DepartureMono font */
-        @font-face {
-            font-family: 'DepartureMono';
-            src: url('https://humantooth.neocities.org/fonts/DepartureMono.woff') format('woff');
-            font-weight: normal;
-            font-style: normal;
-        }
-
-        /* Apply font to the whole page */
-        body {
-            font-family: 'DepartureMono', monospace;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-        }
-
-        .header {
-            background-color: #cf77a4;
-            color: white;
-            padding: 20px;
-            text-transform: uppercase;
-            font-weight: bold;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .header h1 {
-            margin: 0;
-            text-align: center;
-            flex-grow: 1;
-        }
-
-        .header h1 a {
-            color: white;
-            text-decoration: none;
-            font-size: 2rem;
-            display: inline-block;
-            letter-spacing: 5px;
-        }
-
-        .tabs {
-            display: flex;
-            gap: 30px;
-        }
-
-        .tabs a {
-            color: white;
-            text-decoration: none;
-            font-size: 1rem;
-            padding: 10px 20px;
-            background-color: #ff8fb2;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        .tabs a:hover {
-            background-color: #e47d9b;
-        }
-
-        .content {
-            display: flex;
-            padding: 40px;
-            gap: 40px;
-        }
-
-        .left {
-            width: 35%;
-        }
-
-        .title {
-            font-size: 2rem;
-            font-weight: bold;
-            color: #333;
-        }
-
-        .description {
-            font-size: 1.2rem;
-            margin-top: 10px;
-            color: #555;
-        }
-
-        .expandable-box {
-            margin-top: 10px;
-            background: #ddd;
-            padding: 10px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 0.9rem;
-            text-align: left;
-            position: relative;
-        }
-
-        .expandable-box:hover {
-            background: #ccc;
-        }
-
-        .hidden-text {
-            display: none;
-            padding-top: 10px;
-            font-size: 0.9rem;
-            color: #666;
-        }
-
-        .right {
-            width: 65%;
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-        }
-
-        .gallery-item {
-            background: white;
-            padding: 15px;
-            border-radius: 5px;
-            box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        .gallery-item video {
-            width: 100%;
-            height: auto;
-            border-radius: 5px;
-            background: #000;
-            display: block;
-        }
-
-        .gallery-item img {
-            width: 100%;
-            height: auto;
-            border-radius: 5px;
-            background: #ccc;
-            display: block;
-        }
-
-        .gallery-description {
-            margin-top: 10px;
-            font-size: 1rem;
-            color: #444;
-        }
-
-        .footer {
-            background-color: #ffbcd0;
-            color: white;
-            text-align: center;
-            padding: 10px;
-            font-weight: bold;
-            margin-top: auto;
-        }
-    </style>
-</head>
-<body>
-
-<div class="header">
-    <div class="tabs">
-        <a href="https://damarisguzman.neocities.org/newmaris">New Media</a>
-        <a href="https://damarisguzman.neocities.org/video">Video Editing</a>
+<div class="expandable-box" onclick="toggleExpandComponents()">
+    Components to the project ▼
+    <div class="hidden-text" id="components-text">
+        <ul style="list-style-type: none; padding-left: 0;">
+            <li>★ Fully edited 25-second video.</li>
+            <li>★ Equipped with VFX, 3D animation, and immersive film techniques.</li>
+            <li>★ Real-life footage composited.</li>
+            <li>★ AE simulations.</li>
+        </ul>
     </div>
-    <h1><a href="/about">Currently...</a></h1>
-    <div class="tabs">
-        <a href="https://damarisguzman.neocities.org/3danimation">3D Animation</a>
-        <a href="https://damarisguzman.neocities.org/archive">Archive</a>
-    </div>
-</div>
-
-<div class="content">
-    <!-- Left Side (Title and Text) -->
-    <div class="left">
-        <div class="title">Neuro Bytes</div>
-        <div class="description">Where does our agency end and the algorithm take over?
-
-</div>
-
-        <div class="expandable-box" onclick="toggleExpand()">
-            Read more ▼
-            <div class="hidden-text">
-               This project centers around a short video that critically examines the entanglement between human cognition and digital technology, visualizing the cyclical relationship between productivity, burnout, and digital embodiment. The video integrates visual effects, animated UI overlays, and glitch transitions to simulate the overwhelming sensory experience of navigating hyper-mediated digital spaces. Drawing inspiration from posthumanist discourse, the project interrogates the porous boundary between human agency and algorithmic influence, illustrating the ways in which technology extends, fragments, and distorts self-perception.
-
-At its core, the video engages with the aesthetics of malfunction—graphical glitches, corrupted data streams, and intrusive notifications serve as both formal and conceptual devices that underscore the tensions between human cognition and technological acceleration. The protagonist’s interface, which overlays health metrics, emotional status, and a Tamagotchi-style wellness monitor, transforms the body into an informatic system, a site of constant optimization yet inevitable dysfunction. The visual language draws from both PC Music aesthetics and early internet kitsch, employing glossy neon UI elements to construct a hyper-stylized representation of technological embodiment.
-
-The control panel UI functions as a diegetic interface, a responsive system that visualizes the protagonist’s deteriorating mental state. The notifications—rendered as polished, hyperreal buttons—appear above the computer screen at moments of peak sensory overload, serving as both narrative cues and meta-commentary on the gamification of digital labor. These interruptions, at once sterile and frenetic, articulate a tension between control and collapse, highlighting how digital interfaces mediate self-regulation while simultaneously inducing cognitive fatigue. As the protagonist reaches a breaking point, the system spirals into glitch-induced chaos, culminating in a final moment of technological and corporeal burnout—an abrupt shutdown that mirrors the limits of both machine and mind.
-
-By merging experimental visual effects, UI-driven storytelling, and conceptual inquiries into digital subjectivity, Neuro Bytes presents a meditation on the pressures of technological embodiment, illustrating the ways in which humans and machines co-constitute each other in an era of algorithmic acceleration.
-            </div>
-        </div>
-    </div>
-
-    <!-- Right Side (Gallery) -->
-   <div class="right">
-    <div class="gallery-item">
-        <iframe src="https://drive.google.com/file/d/1Q-ht7v_ZnuyLt9Xj4kLzzibU03wlk8C2/preview" 
-            width="100%" height="360" allowfullscreen>
-        </iframe>
-        <div class="gallery-description">Visualizing an AI "brain" (ae). Smooth gradients b/w colors + shapes lend the composition a hypnotic, dreamlike quality, blurring the line b/w something living + an artificial, computer-generated environment.
-</div>
-    </div>
-    <div class="gallery-item">
-        <iframe src="https://drive.google.com/file/d/1R9_dTNzHJ9dh4fgVOvFK6adwPikBWm-A/preview" 
-            width="100%" height="360" allowfullscreen>
-        </iframe>
-        <div class="gallery-description">Visualization v2 (ae). Simultaneously sensual + slightly uncanny, invoking the sense of looking up-close at a viscous biological mass or a surreal, alien landscape.  </div>
-        </div>
-        <div class="gallery-item">
-            <img src="placeholder.jpg" alt="Placeholder">
-            <div class="gallery-description">Image description here.</div>
-        </div>
-    </div>
-</div>
-
-<div class="footer">
-    <p>© 2024 DAMARIS GUZMAN @GRILL0101</p>
 </div>
 
 <script>
-    function toggleExpand() {
-        var text = document.querySelector(".hidden-text");
+    function toggleExpandComponents() {
+        var text = document.getElementById("components-text");
         text.style.display = text.style.display === "block" ? "none" : "block";
     }
 </script>
-
-</body>
-</html>
