--- a/currently.html
+++ b/currently.html
@@ -4,8 +4,8 @@
         <ul style="list-style-type: none; padding-left: 0;">
             <li>★ Fully edited 25-second video.</li>
             <li>★ Equipped with VFX, 3D animation, and immersive film techniques.</li>
-            <li>★ Real-life footage composited.</li>
-            <li>★ AE simulations.</li>
+            <li>★ Interactive control panel.</li>
+            <li>★ meditative AE simulations</li>
         </ul>
     </div>
 </div>
