--- a/currently.html
+++ b/currently.html
@@ -1,18 +1,243 @@
-<div class="expandable-box" onclick="toggleExpandComponents()">
-    Components to the project ▼
-    <div class="hidden-text" id="components-text">
-        <ul style="list-style-type: none; padding-left: 0;">
-            <li>★ Fully edited 25-second video.</li>
-            <li>★ Equipped with VFX, 3D animation, and immersive film techniques.</li>
-            <li>★ Interactive control panel.</li>
-            <li>★ meditative AE simulations</li>
-        </ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Currently Working On - Neuro Bytes</title>
+    <style>
+        /* Import DepartureMono font */
+        @font-face {
+            font-family: 'DepartureMono';
+            src: url('https://humantooth.neocities.org/fonts/DepartureMono.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
+
+        /* Apply font to the whole page */
+        body {
+            font-family: 'DepartureMono', monospace;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+
+        .header {
+            background-color: #cf77a4;
+            color: white;
+            padding: 20px;
+            text-transform: uppercase;
+            font-weight: bold;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .header h1 {
+            margin: 0;
+            text-align: center;
+            flex-grow: 1;
+        }
+
+        .header h1 a {
+            color: white;
+            text-decoration: none;
+            font-size: 2rem;
+            display: inline-block;
+            letter-spacing: 5px;
+        }
+
+        .tabs {
+            display: flex;
+            gap: 30px;
+        }
+
+        .tabs a {
+            color: white;
+            text-decoration: none;
+            font-size: 1rem;
+            padding: 10px 20px;
+            background-color: #ff8fb2;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .tabs a:hover {
+            background-color: #e47d9b;
+        }
+
+        .content {
+            display: flex;
+            padding: 40px;
+            gap: 40px;
+        }
+
+        .left {
+            width: 35%;
+        }
+
+        .title {
+            font-size: 2rem;
+            font-weight: bold;
+            color: #333;
+        }
+
+        .description {
+            font-size: 1.2rem;
+            margin-top: 10px;
+            color: #555;
+        }
+
+        .expandable-box {
+            margin-top: 10px;
+            background: #ddd;
+            padding: 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 0.9rem;
+            text-align: left;
+            position: relative;
+        }
+
+        .expandable-box:hover {
+            background: #ccc;
+        }
+
+        .hidden-text {
+            display: none;
+            padding-top: 10px;
+            font-size: 0.9rem;
+            color: #666;
+        }
+
+        .right {
+            width: 65%;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+
+        .gallery-item {
+            background: white;
+            padding: 15px;
+            border-radius: 5px;
+            box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .gallery-item video {
+            width: 100%;
+            height: auto;
+            border-radius: 5px;
+            background: #000;
+            display: block;
+        }
+
+        .gallery-item img {
+            width: 100%;
+            height: auto;
+            border-radius: 5px;
+            background: #ccc;
+            display: block;
+        }
+
+        .gallery-description {
+            margin-top: 10px;
+            font-size: 1rem;
+            color: #444;
+        }
+
+        .footer {
+            background-color: #ffbcd0;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            font-weight: bold;
+            margin-top: auto;
+        }
+    </style>
+</head>
+<body>
+
+<div class="header">
+    <div class="tabs">
+        <a href="https://damarisguzman.neocities.org/newmaris">New Media</a>
+        <a href="https://damarisguzman.neocities.org/video">Video Editing</a>
+    </div>
+    <h1><a href="/about">Currently...</a></h1>
+    <div class="tabs">
+        <a href="https://damarisguzman.neocities.org/3danimation">3D Animation</a>
+        <a href="https://damarisguzman.neocities.org/archive">Archive</a>
     </div>
 </div>
 
+<div class="content">
+    <!-- Left Side (Title and Text) -->
+    <div class="left">
+        <div class="title">Neuro Bytes</div>
+        <div class="description">Where does our agency end and the algorithm take over?</div>
+
+        <div class="expandable-box" onclick="toggleExpand()">
+            Concept ▼
+            <div class="hidden-text">
+                This project centers around a short video that critically examines the entanglement between human cognition and digital technology...
+            </div>
+        </div>
+
+        <div class="expandable-box" onclick="toggleExpandComponents()">
+            Components to the project ▼
+            <div class="hidden-text" id="components-text">
+                <ul style="list-style-type: none; padding-left: 0;">
+                    <li>★ Fully edited 25-second video.
+                        <ul style="list-style-type: none; padding-left: 20px;">
+                            <li>➜ Equipped with VFX, 3D animation, and immersive film techniques.</li>
+                        </ul>
+                    </li>
+                    <li>★ Interactive control panel.</li>
+                    <li>★ Meditative AE simulations.</li>
+                    <li>★ Virtual gallery.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <!-- Right Side (Gallery) -->
+    <div class="right">
+        <div class="gallery-item">
+            <iframe src="https://drive.google.com/file/d/1Q-ht7v_ZnuyLt9Xj4kLzzibU03wlk8C2/preview" 
+                width="100%" height="360" allowfullscreen>
+            </iframe>
+            <div class="gallery-description">Visualizing an AI "brain" (ae)...</div>
+        </div>
+        <div class="gallery-item">
+            <iframe src="https://drive.google.com/file/d/1R9_dTNzHJ9dh4fgVOvFK6adwPikBWm-A/preview" 
+                width="100%" height="360" allowfullscreen>
+            </iframe>
+            <div class="gallery-description">Visualization v2 (ae)...</div>
+        </div>
+        <div class="gallery-item">
+            <img src="placeholder.jpg" alt="Placeholder">
+            <div class="gallery-description">Image description here.</div>
+        </div>
+    </div>
+</div>
+
+<div class="footer">
+    <p>© 2024 DAMARIS GUZMAN @GRILL0101</p>
+</div>
+
 <script>
+    function toggleExpand() {
+        var text = document.querySelector(".hidden-text");
+        text.style.display = text.style.display === "block" ? "none" : "block";
+    }
+
     function toggleExpandComponents() {
         var text = document.getElementById("components-text");
         text.style.display = text.style.display === "block" ? "none" : "block";
     }
 </script>
+
+</body>
+</html>
