--- a/currently.html
+++ b/currently.html
@@ -204,40 +204,31 @@
 
     <!-- Right Side (Gallery) -->
     <div class="right">
-        <div class="gallery-item">
-            <iframe src="https://drive.google.com/file/d/1Q-ht7v_ZnuyLt9Xj4kLzzibU03wlk8C2/preview" 
-                width="100%" height="360" allowfullscreen>
-            </iframe>
-            <div class="gallery-description">Visualizing an AI "brain" (ae)...</div>
+    <div class="gallery-item">
+        <iframe src="https://drive.google.com/file/d/1Q-ht7v_ZnuyLt9Xj4kLzzibU03wlk8C2/preview" 
+            width="100%" height="360" allowfullscreen>
+        </iframe>
+        <div class="gallery-description">
+            <p><strong>Visualizing an AI "brain" (AE)</strong></p>
+            <p>Smooth gradients between colors and shapes lend the composition a hypnotic, dreamlike quality, blurring the line between something living and an artificial, computer-generated environment.</p>
         </div>
-        <div class="gallery-item">
-            <iframe src="https://drive.google.com/file/d/1R9_dTNzHJ9dh4fgVOvFK6adwPikBWm-A/preview" 
-                width="100%" height="360" allowfullscreen>
-            </iframe>
-            <div class="gallery-description">Visualization v2 (ae)...</div>
+    </div>
+
+    <div class="gallery-item">
+        <iframe src="https://drive.google.com/file/d/1R9_dTNzHJ9dh4fgVOvFK6adwPikBWm-A/preview" 
+            width="100%" height="360" allowfullscreen>
+        </iframe>
+        <div class="gallery-description">
+            <p><strong>Visualization v2 (AE)</strong></p>
+            <p>Simultaneously sensual and slightly uncanny, invoking the sense of looking up close at a viscous biological mass or a surreal, alien landscape.</p>
         </div>
-        <div class="gallery-item">
-            <img src="placeholder.jpg" alt="Placeholder">
-            <div class="gallery-description">Image description here.</div>
+    </div>
+
+    <div class="gallery-item">
+        <img src="placeholder.jpg" alt="Placeholder">
+        <div class="gallery-description">
+            <p><strong>Additional Visualization</strong></p>
+            <p>Description of the third media element.</p>
         </div>
     </div>
 </div>
-
-<div class="footer">
-    <p>© 2024 DAMARIS GUZMAN @GRILL0101</p>
-</div>
-
-<script>
-    function toggleExpand() {
-        var text = document.querySelector(".hidden-text");
-        text.style.display = text.style.display === "block" ? "none" : "block";
-    }
-
-    function toggleExpandComponents() {
-        var text = document.getElementById("components-text");
-        text.style.display = text.style.display === "block" ? "none" : "block";
-    }
-</script>
-
-</body>
-</html>
