--- a/currently.html
+++ b/currently.html
@@ -211,7 +211,7 @@
     <div class="right">
         <div class="gallery-item">
             <iframe src="https://drive.google.com/file/d/1Q-ht7v_ZnuyLt9Xj4kLzzibU03wlk8C2/preview" 
-                width="100%" height="360" allowfullscreen>
+                width="300" height="300" allowfullscreen>
             </iframe>
             <div class="gallery-description">
                 <p><strong>Visualizing an AI "brain" (AE)</strong></p>
@@ -221,7 +221,7 @@
 
         <div class="gallery-item">
             <iframe src="https://drive.google.com/file/d/1R9_dTNzHJ9dh4fgVOvFK6adwPikBWm-A/preview" 
-                width="100%" height="360" allowfullscreen>
+                width="300" height="300" allowfullscreen>
             </iframe>
             <div class="gallery-description">
                 <p><strong>Visualization v2 (AE)</strong></p>
