--- a/currently.html
+++ b/currently.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currently Working On - Neuro Bytes</title>
     <style>
+        /* Import DepartureMono font */
         @font-face {
             font-family: 'DepartureMono';
             src: url('https://humantooth.neocities.org/fonts/DepartureMono.woff') format('woff');
@@ -12,6 +13,7 @@
             font-style: normal;
         }
 
+        /* Apply font to the whole page */
         body {
             font-family: 'DepartureMono', monospace;
             margin: 0;
@@ -88,10 +90,59 @@
             color: #555;
         }
 
-        .gallery-item iframe {
-            width: auto;
-            height: 300px;
-            max-width: 100%;
+        .expandable-box {
+            margin-top: 10px;
+            background: #ddd;
+            padding: 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 0.9rem;
+            text-align: left;
+            position: relative;
+        }
+
+        .expandable-box:hover {
+            background: #ccc;
+        }
+
+        .hidden-text {
+            display: none;
+            padding-top: 10px;
+            font-size: 0.9rem;
+            color: #666;
+        }
+
+        .tag-banner {
+            background-color: #cf77a4;
+            color: white;
+            padding: 8px;
+            border-radius: 5px;
+            text-align: center;
+            font-size: 0.9rem;
+            margin-bottom: 10px;
+        }
+
+        .right {
+            width: 65%;
+            display: flex;
+            flex-direction: row; /* Keep row to place items side by side */
+            flex-wrap: wrap; /* Allow wrapping to the next line */
+            gap: 20px;
+        }
+
+        .gallery-item {
+            background: white;
+            padding: 15px;
+            border-radius: 5px;
+            box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+            display: inline-block; /* Ensure the frame ends after the content */
+            width: 300px; /* Set width to 300px to match the iframe */
+            height: auto; /* Adjust height to fit content */
+        }
+
+        .gallery-item video, .gallery-item iframe {
+            width: 100%; /* Ensure iframe takes full width of the gallery item */
+            height: auto; /* Adjust height to maintain aspect ratio */
             border-radius: 5px;
             background: #000;
             display: block;
@@ -111,31 +162,136 @@
             font-weight: bold;
             margin-top: auto;
         }
+
+        .buttons {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px 0; /* Add margin to create a gap */
+        }
+
+        .button {
+            padding: 10px 20px;
+            font-size: 1rem;
+            font-family: 'DepartureMono', monospace; /* Ensure font is DepartureMono */
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 6px rgba(0, 0, 0, 0.1);
+            background: linear-gradient(to bottom, #f0f0f0, #d0d0d0);
+        }
+
+        .button.sims {
+            background: linear-gradient(45deg, #ff8fb2, #ff6f91);
+            animation: gradient 3s infinite;
+        }
+
+        .button.interactive-panel {
+            background: linear-gradient(45deg, #cf77a4, #b0568a);
+            animation: gradient 3s infinite;
+        }
+
+        .button.full-video {
+            background: linear-gradient(45deg, #ffbcd0, #ff9cb0);
+            animation: gradient 3s infinite;
+        }
+
+        @keyframes gradient {
+            0% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
+        }
+
+        .button:hover {
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), 0 6px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .hidden {
+            display: none;
+        }
     </style>
 </head>
 <body>
 
 <div class="header">
     <div class="tabs">
-        <a href="#">New Media</a>
-        <a href="#">Video Editing</a>
+        <a href="https://damarisguzman.neocities.org/newmaris">New Media</a>
+        <a href="https://damarisguzman.neocities.org/video">Video Editing</a>
     </div>
-    <h1><a href="#">Currently...</a></h1>
+    <h1><a href="/about">Currently...</a></h1>
     <div class="tabs">
-        <a href="#">3D Animation</a>
-        <a href="#">Archive</a>
+        <a href="https://damarisguzman.neocities.org/3danimation">3D Animation</a>
+        <a href="https://damarisguzman.neocities.org/archive">Archive</a>
     </div>
 </div>
 
 <div class="content">
+    <!-- Left Side (Title and Text) -->
     <div class="left">
         <div class="title">Neuro Bytes</div>
         <div class="description">Where does our agency end and the algorithm take over?</div>
+
+        <!-- Components Expandable Box (Now First) -->
+        <div class="expandable-box" onclick="toggleExpand('components-text')">
+            Components to the project ▼
+            <div class="hidden-text" id="components-text">
+                <ul style="list-style-type: none; padding-left: 0;">
+                    <li>★ Fully edited 25-second video.
+                        <ul style="list-style-type: none; padding-left: 20px;">
+                            <li>➜ Equipped with VFX, 3D animation, and immersive film techniques.</li>
+                        </ul>
+                    </li>
+                    <li>★ Interactive control panel.</li>
+                    <li>★ Meditative AE simulations.</li>
+                    <li>★ Virtual gallery.</li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Concept Expandable Box -->
+        <div class="expandable-box" onclick="toggleExpand('concept-text')">
+            Concept ▼
+            <div class="hidden-text" id="concept-text">
+                <div class="tag-banner">Technological embodiment, immersion, posthumanism, cybernetic loops</div>
+                <p>.</p>
+            </div>
+        </div>
+
+        <!-- Buttons -->
+        <div class="buttons">
+            <button class="button sims" onclick="showGallery('sims')">Sims</button>
+            <button class="button interactive-panel" onclick="showGallery('interactive-panel')">Interactive Panel</button>
+            <button class="button full-video" onclick="showGallery('full-video')">Full Video</button>
+        </div>
+
+        <!-- New Non-Expandable Text Box -->
+        <div class="description">
+            This project centers around a short video that explores how human cognition and digital technology intertwine, illustrating a cycle of productivity, burnout, and digital embodiment. Influenced by posthumanist thought, the project blurs the boundary between human agency and algorithmic influence, showing how technology extends and distorts self-perception.
+            <br><br>
+            Glitches, corrupted data, and intrusive notifications highlight the tension between human cognition and technological acceleration. The protagonist’s interface, layered with health metrics, emotional tracking, and a Tamagotchi-style wellness monitor, turns the body into an informatic system, always optimizing yet bound to fail. Borrowing from PC Music aesthetics and early internet kitsch, neon UI elements lend a hyper-stylized lens on digital embodiment.
+            <br><br>
+            A diegetic control panel reflects the protagonist’s deteriorating mental state, with polished notifications interrupting at moments of peak overload, both narrative cues and commentary on the gamification of digital labor. As the protagonist snaps, the system plunges into glitch chaos, ending in a mutual burnout of mind and machine. The video is not only reflective of technological discourse but overall self-medication and addiction.
+            <br><br>
+            Through experimental effects, UI-driven storytelling, and reflections on digital subjectivity, “Neuro Bytes” probes the pressures of technological embodiment, revealing how humans and machines continually shape each other in an era of algorithmic acceleration.
+        </div>
     </div>
 
-    <div class="right">
+    <!-- Right Side (Gallery) -->
+    <div class="right" id="sims-gallery">
         <div class="gallery-item">
-            <iframe src="https://drive.google.com/file/d/1Q-ht7v_ZnuyLt9Xj4kLzzibU03wlk8C2/preview" allowfullscreen></iframe>
+            <iframe src="https://drive.google.com/file/d/1Q-ht7v_ZnuyLt9Xj4kLzzibU03wlk8C2/preview" 
+                width="300" height="300" allowfullscreen
+                onmouseover="this.contentWindow.postMessage('play', '*');"
+                onmouseout="this.contentWindow.postMessage('pause', '*');">
+            </iframe>
             <div class="gallery-description">
                 <p><strong>Visualizing an AI "brain" (AE)</strong></p>
                 <p>Smooth gradients between colors and shapes lend the composition a hypnotic, dreamlike quality, blurring the line between something living and an artificial, computer-generated environment.</p>
@@ -143,10 +299,61 @@
         </div>
 
         <div class="gallery-item">
-            <iframe src="https://drive.google.com/file/d/1R9_dTNzHJ9dh4fgVOvFK6adwPikBWm-A/preview" allowfullscreen></iframe>
+            <iframe src="https://drive.google.com/file/d/1R9_dTNzHJ9dh4fgVOvFK6adwPikBWm-A/preview" 
+                width="300" height="300" allowfullscreen
+                onmouseover="this.contentWindow.postMessage('play', '*');"
+                onmouseout="this.contentWindow.postMessage('pause', '*');">
+            </iframe>
             <div class="gallery-description">
                 <p><strong>Visualization v2 (AE)</strong></p>
                 <p>Simultaneously sensual and slightly uncanny, invoking the sense of looking up close at a viscous biological mass or a surreal, alien landscape.</p>
+            </div>
+        </div>
+
+        <!-- New Video Placeholder Frames -->
+        <div class="gallery-item">
+            <iframe src="https://placeholder.com/300" 
+                width="300" height="300" allowfullscreen>
+            </iframe>
+            <div class="gallery-description">
+                <p><strong>Placeholder Video 1</strong></p>
+                <p>Description for the placeholder video 1.</p>
+            </div>
+        </div>
+
+        <div class="gallery-item">
+            <iframe src="https://placeholder.com/300" 
+                width="300" height="300" allowfullscreen>
+            </iframe>
+            <div class="gallery-description">
+                <p><strong>Placeholder Video 2</strong></p>
+                <p>Description for the placeholder video 2.</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Placeholder for Interactive Panel -->
+    <div class="right hidden" id="interactive-panel-gallery">
+        <div class="gallery-item">
+            <iframe src="https://placeholder.com/300" 
+                width="300" height="300" allowfullscreen>
+            </iframe>
+            <div class="gallery-description">
+                <p><strong>Interactive Panel Placeholder</strong></p>
+                <p>Description for the interactive panel placeholder.</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Placeholder for Full Video -->
+    <div class="right hidden" id="full-video-gallery">
+        <div class="gallery-item">
+            <iframe src="https://placeholder.com/300" 
+                width="300" height="300" allowfullscreen>
+            </iframe>
+            <div class="gallery-description">
+                <p><strong>Full Video Placeholder</strong></p>
+                <p>Description for the full video placeholder.</p>
             </div>
         </div>
     </div>
@@ -155,6 +362,20 @@
 <div class="footer">
     <p>© 2024 DAMARIS GUZMAN @GRILL0101</p>
 </div>
+
+<script>
+    function toggleExpand(id) {
+        var text = document.getElementById(id);
+        text.style.display = text.style.display === "block" ? "none" : "block";
+    }
+
+    function showGallery(galleryId) {
+        document.getElementById('sims-gallery').classList.add('hidden');
+        document.getElementById('interactive-panel-gallery').classList.add('hidden');
+        document.getElementById('full-video-gallery').classList.add('hidden');
+        document.getElementById(galleryId + '-gallery').classList.remove('hidden');
+    }
+</script>
 
 </body>
 </html>
