--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             </a>
         </div>
         <div class="grid-item">
-           <a href="https://damarisguzman.neocities.org/newmaris">
+           <a href="https://damaris-guzman.github.io/damarisguzman.github.io/newmaris">
             <img src="https://damarisguzman.neocities.org/Portfolio/7a280062-d254-4330-8f43-5c0b854049b8_rwc_180x0x920x720x1280.jpg" alt="New Media">
             <div class="overlay-text">New Media</div>
            </a>
