--- a/currently.html
+++ b/currently.html
@@ -223,7 +223,7 @@
 
 <div class="header">
     <div class="tabs">
-        <a href="https://damarisguzman.neocities.org/newmaris">New Media</a>
+        <a href="https://damaris-guzman.github.io/damarisguzman.github.io/newmaris.html">New Media</a>
         <a href="https://damarisguzman.neocities.org/video">Video Editing</a>
     </div>
     <h1><a href="/about">Currently...</a></h1>
