--- a/newmaris.html
+++ b/newmaris.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Page - Newmaris</title>
+    <title>Newmaris</title>
     <style>
         /* Import DepartureMono font */
         @font-face {
@@ -187,48 +187,19 @@
             font-size: 0.9rem;
             color: #666;
         }
-
-        .gradient-button {
-            display: inline-block;
-            padding: 10px 20px;
-            font-size: 1rem;
-            font-weight: bold;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            background: linear-gradient(45deg, #ff9a9e, #fad0c4);
-            animation: gradient-animation 3s infinite;
-            transition: transform 0.3s ease;
-        }
-
-        .gradient-button:hover {
-            transform: scale(1.1);
-        }
-
-        @keyframes gradient-animation {
-            0% {
-                background-position: 0% 50%;
-            }
-            50% {
-                background-position: 100% 50%;
-            }
-            100% {
-                background-position: 0% 50%;
-            }
-        }
     </style>
 </head>
 <body>
 
 <div class="header">
     <div class="tabs">
-        <a href="https://damarisguzman.neocities.org/newmaris">New Media</a>
-        <a href="https://damarisguzman.neocities.org/video">Video Editing</a>
+        <a href="https://damaris-guzman.github.io/damarisguzman.github.io/newmaris.html">New Media</a>
+        <a href="https://damaris-guzman.github.io/damarisguzman.github.io/video.html">Video Editing</a>
     </div>
     <h1><a href="/about">New Media</a></h1>
     <div class="tabs">
-        <a href="https://damarisguzman.neocities.org/3danimation">3D Animation</a>
-        <a href="https://damarisguzman.neocities.org/archive">Archive</a>
+        <a href="https://damaris-guzman.github.io/damarisguzman.github.io/3danimation.html">3D Animation</a>
+        <a href="https://damaris-guzman.github.io/damarisguzman.github.io/archive.html">Archive</a>
     </div>
 </div>
 
@@ -274,11 +245,6 @@
             <button class="heart-button">&#10084;</button>
             <button class="arrow-button" onclick="nextFrame()">&#9654;</button>
         </div>
-        <div style="text-align: center; margin-top: 20px;">
-            <a href="https://sites.google.com/ucsc.edu/femexfilmarchive/filmmaker-index/avital-meshi?pli=1" target="_blank" class="gradient-button">
-                （✿ ͡◕ ᴗ◕)つ━━✫・*。Click here to read the interview!
-            </a>
-        </div>
     </div>
 </div>
 
@@ -295,7 +261,7 @@
             imgDesc: "One of the highlights of my life. We had an enlightening conversation regarding his recent project Hidden Geometries!"
         },
         {
-            imgSrc: "images/TamikoThiel.jpg",
+            imgSrc: "images/Tamiko.jpg",
             imgTitle: "Studio Visit with Tamiko Thiel (October, 2024)",
             imgDesc: "During my first semester at SJSU, I had the honor of presenting my work to Tamiko Thiel for feedback!"
         },
