--- a/currently.html
+++ b/currently.html
@@ -269,7 +269,7 @@
         <div class="buttons">
             <button class="button sims" onclick="showGallery('sims')">Sims</button>
             <button class="button interactive-panel" onclick="showGallery('interactive-panel')">Interactive Panel</button>
-            <button class="button full-video" onclick="showGallery('full-video')">Full Video</button>
+            <button class="button full-video" onclick="showGallery('full-video')">Video in proess</button>
         </div>
 
         <!-- New Non-Expandable Text Box -->
