--- a/currently.html
+++ b/currently.html
@@ -269,7 +269,7 @@
         <div class="buttons">
             <button class="button sims" onclick="showGallery('sims')">Sims</button>
             <button class="button interactive-panel" onclick="showGallery('interactive-panel')">Interactive Panel</button>
-            <button class="button full-video" onclick="showGallery('full-video')">Video in proess</button>
+            <button class="button full-video" onclick="showGallery('full-video')">Video in process</button>
         </div>
 
         <!-- New Non-Expandable Text Box -->
@@ -345,15 +345,15 @@
         </div>
     </div>
 
-    <!-- Placeholder for Full Video -->
+    <!-- Placeholder for Video -->
     <div class="right hidden" id="full-video-gallery">
         <div class="gallery-item">
-            <iframe src="https://placeholder.com/300" 
+            <iframe src="https://youtube.com/shorts/3IB28p7wyxw?feature=share" 
                 width="300" height="300" allowfullscreen>
             </iframe>
             <div class="gallery-description">
-                <p><strong>Full Video Placeholder</strong></p>
-                <p>Description for the full video placeholder.</p>
+                <p><strong>Draft video simulating shot list</strong></p>
+                <p>Mostly focused on showing the narrative. VFX not shown.</p>
             </div>
         </div>
     </div>
